pkg/front_end/testcases/type_variable_prefix.dart.strong.expect
library;
import self as self;
import "dart:core" as core;

class C<T extends core::Object> extends core::Object {
  default constructor •() → void
    : super core::Object::•()
    ;
  method method() → invalid-type
    return "Hello, World!" as{TypeError} invalid-type;
}
static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/type_variable_prefix.dart:8:24: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'invalid-type'.\nTry changing the type of the left hand side, or casting the right hand side to 'invalid-type'.\n  T.String method() => \"Hello, World!\";\n                       ^", "pkg/front_end/testcases/type_variable_prefix.dart:12:12: Error: A value of type 'invalid-type' can't be assigned to a variable of type 'dart.core::String'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::String'.\n  T.String s = new C().method();\n           ^"]/* from null */;
static method main() → dynamic {
  core::String s = new self::C::•<dynamic>().{self::C::method}() as{TypeError} core::String;
  core::print(s);
}
